Include RHEL8 CV CaC definition

--- a/config_as_code/satellite/leapp_7_to_8/content_views.yml
+++ b/config_as_code/satellite/leapp_7_to_8/content_views.yml
@@ -17,4 +17,20 @@ satellite_content_views:
         product: Red Hat Enterprise Linux for x86_64
       - name: Red Hat Satellite Client 6 for RHEL 8 x86_64 RPMs
         product: 'Red Hat Enterprise Linux for x86_64'
+  - name: RHEL8
+    content_view: RHEL8
+    content_view_update: true
+    lifecycle_environments:
+      - "RHEL8_Dev"
+      - "RHEL8_QA"
+      - "RHEL8_Prod"
+    repositories:
+    - name: Red Hat Enterprise Linux 8 for x86_64 - BaseOS RPMs 8.8
+      product: Red Hat Enterprise Linux for x86_64
+    - name: Red Hat Enterprise Linux 8 for x86_64 - AppStream RPMs 8.8
+      product: Red Hat Enterprise Linux for x86_64
+    - name: Red Hat Satellite Utils 6.13 for RHEL 8 x86_64 RPMs
+      product: Red Hat Enterprise Linux for x86_64
+    - name: Red Hat Satellite Client 6 for RHEL 8 x86_64 RPMs
+      product: Red Hat Enterprise Linux for x86_64
 ...
