Clear yum cache

--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -37,4 +37,12 @@
     - {key: "PasswordAuthentication", value: "no"}
   notify:
     - Restart sshd
+
+- name: Command - yum clean all
+  ansible.builtin.command: >-
+    yum clean all
+
+- name: Delete /var/cache/yum/*
+  ansible.builtin.command: >-
+    rm -rf /var/cache/yum/*
 ...
