--- a/leapp_remediate.yml
+++ b/leapp_remediate.yml
@@ -18,6 +18,14 @@
       when: ansible_distribution_major_version|int == 8
       ansible.builtin.import_tasks: remediate_rhel8.yml
 
+    - name: Command - yum clean all
+      ansible.builtin.command: >-
+        yum clean all
+
+    - name: Delete /var/cache/yum/*
+      ansible.builtin.command: >-
+        rm -rf /var/cache/yum/*
+
   handlers:
     - name: "Restart sshd"
       ansible.builtin.service:
