--- a/leapp_analysis.yml
+++ b/leapp_analysis.yml
@@ -59,6 +59,7 @@
         owner: root
         group: root
         state: link
+        force: true
 
     - name: Include randomized delay before starting analysis
       ansible.builtin.command: |
