--- a/leapp_analysis.yml
+++ b/leapp_analysis.yml
@@ -44,21 +44,21 @@
         - ansible_product_uuid|regex_search('^ec2') or ansible_product_uuid|regex_search('^EC2')
         - "'rhui' in yum_repolist.stdout"
 
-    - name: Create dedicated directory for leapp
-      ansible.builtin.file:
-        path: /leapp
-        state: directory
-        owner: root
-        group: root
-        mode: '0700'
+#    - name: Create dedicated directory for leapp
+#      ansible.builtin.file:
+#        path: /leapp
+#        state: directory
+#        owner: root
+#        group: root
+#        mode: '0700'
 
-    - name: Create symbolic link for /var/lib/leapp
-      ansible.builtin.file:
-        src: /leapp
-        dest: /var/lib/leapp
-        owner: root
-        group: root
-        state: link
+#    - name: Create symbolic link for /var/lib/leapp
+#      ansible.builtin.file:
+#        src: /leapp
+#        dest: /var/lib/leapp
+#        owner: root
+#       group: root
+#        state: link
 
     - name: Include randomized delay before starting analysis
       ansible.builtin.command: |
