Move yum/dnf cache clean to version specific files

--- a/remediate_rhel8.yml
+++ b/remediate_rhel8.yml
@@ -35,4 +35,12 @@
     - {key: "PasswordAuthentication", value: "no"}
   notify:
     - Restart sshd
+
+- name: Command - dnf clean all
+  ansible.builtin.command: >-
+    dnf clean all
+
+- name: Delete /var/cache/yum/*
+  ansible.builtin.command: >-
+    rm -rf /var/cache/yum/*
 ...
