--- a/config_as_code/controller/rhel_9_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_9_inventories/job_templates.yml
@@ -67,7 +67,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL8.*$') | map(attribute='name') | list}}"
           required: true
     extra_vars:
       leapp_upgrade_type: satellite
@@ -86,7 +86,7 @@ controller_templates:
     ask_variables_on_launch: true
     ask_limit_on_launch: true
 
-  - name: LEAPP / RHEL7to8 / 03 Rollback
+  - name: LEAPP / RHEL8to9 / 03 Rollback
     description: Revert node snapshot - selection via dynamic inventory group
     project: Automated Management
     playbook: snapshot_instance_lvm.yml
@@ -105,7 +105,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL8.*$') | map(attribute='name') | list }}"
           required: true
     ask_variables_on_launch: true
     ask_limit_on_launch: true
@@ -130,7 +130,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL8.*$') | map(attribute='name') | list }}"
           required: true
     extra_vars:
       leapp_upgrade_type: satellite
