--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -228,6 +228,30 @@ controller_templates:
             - repositories
           required: true
 
+  - name: SERVER / Register 
+    project: Automated Management
+    playbook: server_register_dynamic_inv.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Satellite Credential
+      - Workshop Credential
+    extra_vars:
+      org_id: Default_Organization
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
+    ask_limit_on_launch: true
+
   - name: SERVER / Unregister 
     project: Automated Management
     playbook: server_unregister.yml
