--- a/leapp_analysis.yml
+++ b/leapp_analysis.yml
@@ -1,10 +1,12 @@
 ---
-- name: Analysis
+- name: Leapp Analysis
   hosts: "{{ dynamic_inventory_group | default(omit) }}"
   strategy: free
   gather_facts: true
   become: true
   force_handlers: true
+  vars_files:
+    - leapp_vars.yml
   pre_tasks:
     - name: Register output of 'yum repolist'
       ansible.builtin.shell: |
