--- a/config_as_code/controller/rhel_8_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_8_inventories/job_templates.yml
@@ -22,7 +22,7 @@ controller_templates:
           choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['ansible-1.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
           required: true
 
-  - name: LEAPP / RHEL7to8 / 01 Analysis
+  - name: LEAPP / 01 Analysis
     project: Automated Management
     playbook: leapp_analysis.yml
     inventory: EC2 Dynamic Inventory
@@ -41,22 +41,9 @@ controller_templates:
           variable: dynamic_inventory_group
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
           required: true
-    extra_vars:
-      leapp_upgrade_type: satellite
-      satellite_organization: 'Default_Organization'
-      satellite_activation_key_pre_leapp: 'RHEL7_Dev'
-      satellite_activation_key_leapp: 'RHEL7IPU_Dev'
-      leapp_repos_enabled:
-        - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
-      analysis_packages_el7:
-        - leapp-upgrade
-        - cockpit-leapp
-        - dnf-plugins-core
-      leapp_preupg_opts: '--target 8.8'
-    ask_variables_on_launch: true
     ask_limit_on_launch: true
 
-  - name: LEAPP / RHEL7to8 / 03 Rollback
+  - name: LEAPP / 03 Rollback
     description: Revert node snapshot - selection via dynamic inventory group
     project: Automated Management
     playbook: snapshot_instance_lvm.yml
@@ -83,7 +70,7 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: OS / Upgrade / RHEL7to8
+  - name: OS / Upgrade
     project: Automated Management
     playbook: leapp_upgrade.yml
     inventory: EC2 Dynamic Inventory
