--- a/config_as_code/controller/rhel_8_inventories/worflow_job_templates.yml
+++ b/config_as_code/controller/rhel_8_inventories/worflow_job_templates.yml
@@ -1,6 +1,6 @@
 ---
 controller_workflows:
-  - name: LEAPP / RHEL7to8 / 02 Upgrade
+  - name: LEAPP / 02 Upgrade
     description: Workflow for Snapshot and Leapp Upgrade
     extra_vars:
       lvm_snapshots_action: create
@@ -24,13 +24,13 @@ controller_workflows:
         organization: Default
         all_parents_must_converge: false
         success_nodes:
-          - OS / Upgrade / RHEL7to8
-      - identifier: OS / Upgrade / RHEL7to8
-        unified_job_template: OS / Upgrade / RHEL7to8
+          - OS / Upgrade
+      - identifier: OS / Upgrade
+        unified_job_template: OS / Upgrade
         organization: Default
         all_parents_must_converge: false
         success_nodes: []
-  - name: LEAPP / RHEL7to8 / 04 Commit
+  - name: LEAPP / 04 Commit
     description: Workflow for Snapshot delete and Update instance tags
     extra_vars:
       lvm_snapshots_action: remove
