--- a/config_as_code/controller/rhel_9_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_9_inventories/job_templates.yml
@@ -50,7 +50,7 @@ controller_templates:
             - Prod
           required: true
 
-  - name: LEAPP / RHEL8to9 / 01 Analysis
+  - name: LEAPP / 01 Analysis
     project: Automated Management
     playbook: leapp_analysis.yml
     inventory: EC2 Dynamic Inventory
@@ -69,24 +69,9 @@ controller_templates:
           variable: dynamic_inventory_group
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL8.*$') | map(attribute='name') | list}}"
           required: true
-    extra_vars:
-      leapp_upgrade_type: satellite
-      satellite_organization: 'Default_Organization'
-      satellite_activation_key_pre_leapp: 'RHEL8_Dev'
-      satellite_activation_key_leapp: 'RHEL8IPU_Dev'
-      leapp_repos_enabled:
-        - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
-      analysis_packages_el8:
-        - leapp-upgrade
-        - cockpit
-        - cockpit-system
-        - cockpit-leapp
-        - vdo
-      leapp_preupg_opts: '--target 9.2'
-    ask_variables_on_launch: true
     ask_limit_on_launch: true
 
-  - name: LEAPP / RHEL8to9 / 03 Rollback
+  - name: LEAPP / 03 Rollback
     description: Revert node snapshot - selection via dynamic inventory group
     project: Automated Management
     playbook: snapshot_instance_lvm.yml
@@ -113,7 +98,7 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: OS / Upgrade / RHEL8to9
+  - name: OS / Upgrade
     project: Automated Management
     playbook: leapp_upgrade.yml
     inventory: EC2 Dynamic Inventory
