--- a/leapp_vars.yml
+++ b/leapp_vars.yml
@@ -28,7 +28,7 @@ satellite_activation_key_pre_leapp: >-
 satellite_activation_key_leapp: >-
   {% if ansible_distribution_major_version == '7' and leapp_target_version == '8.8' -%}
     RHEL7IPU_Dev
-  {% if ansible_distribution_major_version == '8' and leapp_target_version == '9.2' -%}
+  {% elif ansible_distribution_major_version == '8' and leapp_target_version == '9.2' -%}
     RHEL8IPU_Dev
   {% endif %}
 satellite_activation_key_post_leapp: >-
