--- a/config_as_code/controller/rhel_8_inventories/worflow_job_templates.yml
+++ b/config_as_code/controller/rhel_8_inventories/worflow_job_templates.yml
@@ -17,6 +17,12 @@ controller_workflows:
           variable: dynamic_inventory_group
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL7.*$') | map(attribute='name') | list}}"
           required: true
+        - question_name: Leapp target version
+          type: multiplechoice
+          variable: leapp_target_version
+          choices:
+            - '8.8'
+          required: true
     ask_limit_on_launch: true
     simplified_workflow_nodes:
       - identifier: UTILITY / Snapshot Instance
