Include random delay before removing host

--- a/server_unregister.yml
+++ b/server_unregister.yml
@@ -37,6 +37,12 @@
         subscription-manager clean
       ignore_errors: true
 
+    - name: Include randomized delay before removing content host from Satellite
+      ansible.builtin.command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(10.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
+
     - name: Remove host from Satellite satellite.example.com"
       redhat.satellite.host:
         server_url: "https://satellite.example.com"
