--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -1,7 +1,7 @@
 ---
 - name: Convert2rhel pre-conversion analysis
   hosts: "{{ centos_lifecycle_environment | default(omit) }}"
-  strategy: free
+  strategy: ansible.builtin.free
   gather_facts: true
   become: true
   environment:
