--- a/leapp_analysis.yml
+++ b/leapp_analysis.yml
@@ -1,7 +1,7 @@
 ---
 - name: Leapp Analysis
   hosts: "{{ dynamic_inventory_group | default(omit) }}"
-  strategy: free
+  strategy: ansible.builtin.free
   gather_facts: true
   become: true
   force_handlers: true
