--- a/config_as_code/satellite/leapp_8_to_9/lifecycle_environments.yml
+++ b/config_as_code/satellite/leapp_8_to_9/lifecycle_environments.yml
@@ -1,7 +1,7 @@
 ---
 satellite_lifecycle_environments:
   # Red Hat Enterprise Linux 8
-  - name: "RHEL8IPU_Dev"
+  - name: "RHEL8IPU92_Dev"
     prior: "Library"
   # Red Hat Enterprise Linux 9
   - name: "RHEL9_Dev"
