--- a/config_as_code/satellite/leapp_8_to_9/content_views.yml
+++ b/config_as_code/satellite/leapp_8_to_9/content_views.yml
@@ -1,11 +1,11 @@
 ---
 satellite_content_views:
   # Red Hat Enterprise Linux IPU 8 to 9
-  - name: RHEL8IPU
-    content_view: RHEL8IPU
+  - name: RHEL8IPU92
+    content_view: RHEL8IPU92
     content_view_update: true
     lifecycle_environments:
-      - "RHEL8IPU_Dev"
+      - "RHEL8IPU92_Dev"
     repositories:
       - name: Red Hat Enterprise Linux 8 for x86_64 - BaseOS RPMs 8.8
         product: Red Hat Enterprise Linux for x86_64
