Implement different delay method

--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -47,11 +47,10 @@
       ansible.builtin.command: >-
         rpm -e --nodeps --justdb centos-release
 
-    - name: Include randomized delay before starting analysis
-      ansible.builtin.command: |
-        python3 -c 'import time;import random;zzzzz=random.uniform(60.0,120.0);time.sleep(zzzzz);print(zzzzz)'
-      delegate_to: localhost
-      connection: local
+    - name: Pause for 30 seconds to space out yum package requests to Satellite
+      ansible.builtin.pause:
+        seconds: 30
+      throttle: 1
 
     - name: Generate pre-conversion analysis report
       ansible.builtin.import_role:
