--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -47,10 +47,9 @@
       ansible.builtin.command: >-
         rpm -e --nodeps --justdb centos-release
 
-    - name: Pause for 30 seconds to space out yum package requests to Satellite
+    - name: Pause time generated from node number
       ansible.builtin.pause:
-        seconds: 30
-      throttle: 1
+        seconds: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
 
     - name: Generate pre-conversion analysis report
       ansible.builtin.import_role:
