--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -47,9 +47,13 @@
       ansible.builtin.command: >-
         rpm -e --nodeps --justdb centos-release
 
+    - name: Set delay time via gather_facts
+      ansible.builtin.set_fact:
+        node_delay_time: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
+
     - name: Include delay before starting analysis
       ansible.builtin.command: |
-        python3 -c 'import time;time.sleep("{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}")'
+        python3 -c 'import time;time.sleep("{{ node_delay_time }}")'
       delegate_to: localhost
       connection: local
 
