--- a/leapp_analysis.yml
+++ b/leapp_analysis.yml
@@ -62,9 +62,13 @@
 #       group: root
 #        state: link
 
-    - name: Include randomized delay before starting analysis
+    - name: Set delay time via gather_facts
+      ansible.builtin.set_fact:
+        node_delay_time: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
+
+    - name: Include delay before starting analysis
       ansible.builtin.command: |
-        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+        python3 -c 'import time;time.sleep({{ node_delay_time }})'
       delegate_to: localhost
       connection: local
 
