--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -22,9 +22,13 @@
         fail_msg: "CentOS 7 minor release must be >= 9"
         success_msg: "CentOS 7 minor release minimum requirement met, continue..."
 
-    - name: Include randomized delay before starting analysis
+    - name: Set delay time via gather_facts
+      ansible.builtin.set_fact:
+        node_delay_time: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
+
+    - name: Include delay before starting conversion
       ansible.builtin.command: |
-        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,60.0);time.sleep(zzzzz);print(zzzzz)'
+        python3 -c 'import time;time.sleep({{ node_delay_time }})'
       delegate_to: localhost
       connection: local
 
