--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -1,7 +1,7 @@
 ---
 - name: Convert2rhel conversion
   hosts: "{{ dynamic_inventory_group | default(omit) }}"
-  strategy: free
+  strategy: ansible.builtin.free
   gather_facts: true
   become: true
   environment:
