--- a/leapp_upgrade.yml
+++ b/leapp_upgrade.yml
@@ -1,7 +1,7 @@
 ---
 - name: Leapp upgrade
   hosts: "{{ dynamic_inventory_group | default(omit) }}"
-  strategy: free
+  strategy: ansible.builtin.free
   become: true
   force_handlers: true
   # vars:
@@ -11,7 +11,7 @@
   tasks:
     - name: Include randomized delay before beginning upgrade
       ansible.builtin.command: |
-        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,60.0);time.sleep(zzzzz);print(zzzzz)'
       delegate_to: localhost
       connection: local
     - name: Perform OS upgrade
