--- a/misc_host_config.yml
+++ b/misc_host_config.yml
@@ -6,10 +6,10 @@
   become: true
   force_handlers: true
   tasks:
-    - name: Configure rhel7 systems
+    - name: Configure EL7 systems
       when: ansible_distribution_major_version | int == 7
       ansible.builtin.import_tasks: misc_host_config_rhel7.yml
-    - name: Configure rhel8 systems
+    - name: Configure RHEL8 systems
       when: ansible_distribution_major_version | int == 8
       ansible.builtin.import_tasks: misc_host_config_rhel8.yml
 
