gather_facts: false, become: true

--- a/disable_transparent_hugepages.yml
+++ b/disable_transparent_hugepages.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: "{{ HOSTS }}"
-  become: yes
+  gather_facts: false
+  become: true
   tasks:
     - name: Check for presence of satellite.facts
       ansible.builtin.stat:
