--- a/disable_transparent_hugepages.yml
+++ b/disable_transparent_hugepages.yml
@@ -16,10 +16,21 @@
         backup: true
         backrefs: true
       when: satellite_facts_path.stat.exists
-#      notify: Rebuild grub.cfg
+      notify:
+        - Rebuild grub.cfg
+        - Reboot host and wait
 
-#  handlers:
-#    - name: "Rebuild grub.cfg"
-#      ansible.builtin.command: >-
-#        grub2-mkconfig -o /boot/grub2/grub.cfg
+  handlers:
+    - name: Rebuild grub.cfg
+      ansible.builtin.command: >-
+        grub2-mkconfig -o /boot/grub2/grub.cfg
+
+    - name: Reboot host and wait
+      ansible.builtin.reboot:
+        msg: "Reboot initiated by Ansible"
+        connect_timeout: 5
+        reboot_timeout: 600
+        pre_reboot_delay: 0
+        post_reboot_delay: 30
+        test_command: whoami
 ...
